Modificação dos textos e últimos acertos

--- a/css/cayman.css
+++ b/css/cayman.css
@@ -237,3 +237,11 @@ a {
 
 .site-footer-credits {
   color: #819198; }
+  
+  
+  
+.redes-sociais {
+	float:right;
+	margin-top:7px;
+	margin-bottom:15px;
+}
