--- a/css/cayman.css
+++ b/css/cayman.css
@@ -218,7 +218,7 @@ a {
     border: 0; }
 
 .site-footer {
-  padding-top: 2rem;
+  padding-top: 7px;
   margin-top: 2rem;
   border-top: solid 1px #eff0f1; }
   @media screen and (min-width: 64em) {
@@ -238,10 +238,7 @@ a {
 .site-footer-credits {
   color: #819198; }
   
-  
-  
+ 
 .redes-sociais {
-	float:right;
-	margin-top:7px;
-	margin-bottom:15px;
+	display:block;
 }
